<resources>
    <string name="nid_label_continue">Continue</string>
    <string name="nid_label_finish">Finish</string>

    <string name="nid_app_name">Neuro ID Example</string>
    <string name="nid_main_activity_title">Main Activity</string>
    <string name="nid_main_activity_sid_title">SID:</string>
    <string name="nid_main_activity_cid_title">CID:</string>
    <string name="nid_main_button_show_activity_non_automatic_events">Show Non-automatic events</string>
    <string name="nid_main_button_show_activity_one_fragment">Show Activity with one fragment</string>
    <string name="nid_main_button_show_activity_fragments">Show Activity with fragments</string>
    <string name="nid_main_button_show_sand_box">Show Sand Box</string>
    <string name="nid_editText_normal_hint">Normal Input</string>
    <string name="nid_editText_password_hint">Password Input</string>
    <string name="nid_editText_credit_card_hint">#### #### #### ####</string>
    <string name="nid_second_activity_title">Second Activity</string>
    <string name="nid_second_activity_description">This text belongs to the TextView of the activity, below is the frame that contains the fragment</string>
    <string name="nid_only_one_fragment">This section is a fragment</string>
    <string name="nid_only_one_fragment_description">It\'s only one fragment on Activity, no navigation toolbar needed. Here are different views that can be interacted it</string>
    <string name="nid_only_one_fragment_checkboxes">\u2022 CheckBoxes</string>
    <string name="nid_only_one_fragment_first_check">First check</string>
    <string name="nid_only_one_fragment_second_check">Second check</string>
    <string name="nid_only_one_fragment_third_check">Third check</string>
    <string name="nid_only_one_fragment_fourth_check">Fourth check</string>
    <string name="nid_only_one_fragment_radiobuttons">\u2022 Radiobuttons</string>
    <string name="nid_only_one_fragment_first_radio">First radiobutton</string>
    <string name="nid_only_one_fragment_second_radio">Second radiobutton</string>
    <string name="nid_only_one_fragment_third_radio">Third radiobutton</string>
    <string name="nid_only_one_fragment_switches">\u2022 Switches</string>
    <string name="nid_only_one_fragment_first_switch">First switch</string>
    <string name="nid_only_one_fragment_second_switch">Second switch</string>
    <string name="nid_only_one_fragment_third_switch">Third switch</string>
    <string name="nid_only_one_fragment_seekbar">\u2022 SeekBar</string>
    <string name="nid_only_one_fragment_toggle_button">\u2022 Toggle Button</string>
    <string name="nid_only_one_fragment_rating_bar">\u2022 Rating Bar</string>

    <string name="nid_fragment_one_title">Fragment one</string>
    <string name="nid_fragment_one_custom_event">Send custom event</string>
    <string name="nid_fragment_one_spinner">\u2022 Spinner</string>
    <string-array name="nid_array_spinner">
        <item>Item one</item>
        <item>Item two</item>
        <item>Item three</item>
        <item>Item four</item>
        <item>Item five</item>
    </string-array>
    <string name="nid_fragment_one_autocomplete_box">\u2022 Autocomplete Text</string>
    <string name="nid_fragment_one_autocomplete_hint">Color</string>
    <string-array name="nid_array_colors">
        <item>Yellow</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Brown</item>
    </string-array>
    <string name="nid_fragment_one_edit_date">Date</string>
    <string name="nid_fragment_one_button_date">Pick Date</string>
    <string name="nid_fragment_one_edit_time">Time</string>
    <string name="nid_fragment_one_button_time">Pick Time</string>
    <string name="nid_fragment_two_title">Fragment two</string>
    <string name="nid_fragment_three_title">Fragment three</string>

    <string name="nid_custom_events_title_activity">Non-automatic events</string>
    <string name="nid_form_submit_custom_events_activity">Event form submit</string>
    <string name="nid_form_submit_success_custom_events_activity">Event form submit success</string>
    <string name="nid_form_submit_failure_custom_events_activity">Event form submit failure</string>
    <string name="nid_form_custom_tag_events_activity">Event custom</string>
    <string name="nid_custom_events_saved_event_activity">Event saved</string>


    <string name="nid_app_demo_session_id">Session ID:</string>
    <string name="nid_app_demo_client_id">Client ID:</string>
    <string name="nid_app_demo_subtitle_welcome">Welcome!! You\'re one step away from checking your loan options. $</string>
    <string name="nid_app_demo_subtitle_description">Checking your loan options does not affect your credit score.</string>
    <string name="nid_app_demo_first_name">First Name</string>
    <string name="nid_app_demo_last_name">Last Name</string>
    <string name="nid_app_demo_date_birth">Date of Birth:</string>
    <string name="nid_app_demo_select_an_item">Select an item</string>
    <string name="nid_app_demo_email">Email</string>
    <string name="nid_app_demo_home_city">Home City</string>
    <string name="nid_app_demo_home_zip_code">Home Zip Code</string>
    <string name="nid_app_demo_phone_number">Phone Number</string>
    <string name="nid_app_demo_employer">Employer</string>
    <string name="nid_app_demo_employer_address">Employer Address</string>
    <string name="nid_app_demo_employer_phone_number">Employer Phone Number</string>
    <string name="nid_app_demo_continue">Continue</string>

    <string-array name="nid_app_array_years">
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
    </string-array>

    <string-array name="nid_app_array_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>