<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            style="@style/NidTextViewSubTitle"
            android:id="@+id/textView_label_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nid_only_one_fragment"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/nid_only_one_fragment_description"
            app:layout_constraintTop_toBottomOf="@id/textView_label_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:id="@+id/layout_nested"
            app:layout_constraintTop_toBottomOf="@id/textView_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_checkboxes" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_first_check"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_second_check"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_third_check"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_fourth_check"/>

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_radiobuttons" />

                <RadioGroup
                    android:id="@+id/radioGroup_one"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nid_only_one_fragment_first_radio" />
                    <RadioButton
                        android:id="@+id/radioButton_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nid_only_one_fragment_second_radio" />
                    <RadioButton
                        android:id="@+id/radioButton_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nid_only_one_fragment_third_radio" />
                </RadioGroup>

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_switches" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:switchPadding="10dp"
                    android:text="@string/nid_only_one_fragment_first_switch"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:switchPadding="10dp"
                    android:text="@string/nid_only_one_fragment_second_switch"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:switchPadding="10dp"
                    android:text="@string/nid_only_one_fragment_third_switch"/>

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_seekbar" />

                <SeekBar
                    android:id="@+id/seekBar_one"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>