<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_send_form_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nid_form_submit_custom_events_activity"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_send_form_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nid_form_submit_success_custom_events_activity"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_send_form_failure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nid_form_submit_failure_custom_events_activity"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_send_custom_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nid_form_custom_tag_events_activity"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>