<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"
            tools:ignore="UselessLeaf" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textIl_normal_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_normal_field_fragment_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:hint="@string/nid_editText_normal_hint"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_fragment_one_spinner" />

                <Spinner
                    android:id="@+id/spinner_example"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/nid_array_spinner"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/button_custom_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nid_fragment_one_custom_event"
                    android:textAllCaps="false"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#2196F3" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_continue_frag_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textAllCaps="false"
            android:backgroundTint="#2196F3"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom|end"
            android:textAlignment="center"
            android:text="@string/nid_label_continue"
            tools:ignore="RtlCompat" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>